--- a/app/src/main/res/xml/bottom_bar_tabs.xml
+++ b/app/src/main/res/xml/bottom_bar_tabs.xml
@@ -2,27 +2,27 @@
     <tab
         id="@+id/tab_informasi"
         icon="@drawable/ic_notifications_none"
-        title="Informasi"
+        title=""
         activeColor="@color/colorPrimaryDark"
         />
     <tab
         id="@+id/tab_pertandingan"
         icon="@drawable/ic_content_paste"
-        title="Pertandingan"
+        title=""
         activeColor="@color/colorPrimaryDark" />
     <tab
         id="@+id/tab_cabang_olahraga"
         icon="@drawable/ic_assignment"
-        title="Cabor"
+        title=""
         activeColor="@color/colorPrimaryDark"/>
     <tab
         id="@+id/tab_medali"
         icon="@drawable/ic_medal"
-        title="Medali"
+        title=""
         activeColor="@color/colorPrimaryDark" />
     <tab
         id="@+id/tab_sejarah"
         icon="@drawable/ic_local_movies"
-        title="Sejarah"
+        title=""
         activeColor="@color/colorPrimaryDark"/>
 </tabs>
